--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,11 +1,12 @@
-<!-- About Section -->
-    <section id="privacy_policy">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Privicy Policy</h2>
-                </div>
-            </div>
+---
+layout: default
+---
+<div class="privacy_policy">
+	<div class="row">
+		<div class="col-lg-12 text-center">
+			<h2 class="section-heading">Privicy Policy</h2>
+		</div>
+	</div>
             <div class="row">
                 <div class="col-lg-12">
                     <p>Your privacy is important to us. It is Clyde Technology&#39;s policy to respect your privacy and comply with any applicable law and regulation regarding any personal information we may collect about you, including across our website, <a href="https://clydetechnology.com">https://clydetechnology.com</a>, and other sites we own and operate. </p>
@@ -51,5 +52,4 @@
 <p>contact@clydetechnology.com </p>
                 </div>
             </div>
-        </div>
-    </section>
+</div>
